plugins {
    alias(libs.plugins.androidApplication)
    id 'com.google.gms.google-services'
}

android {
    namespace 'com.soumyajit.mavhealth'
    compileSdk 34

    defaultConfig {
        applicationId "com.soumyajit.mavhealth"
        minSdk 24
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    tasks.withType(JavaCompile).configureEach{
        options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {

    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    implementation libs.play.services.base
    implementation libs.firebase.firestore
    implementation libs.play.services.auth
    implementation libs.firebase.auth
    implementation libs.firebase.storage
    testImplementation libs.junit
    implementation("com.google.firebase:firebase-firestore")
    implementation("com.google.firebase:firebase-firestore")
    implementation libs.picasso
    implementation libs.stepview
    implementation 'com.github.d-max:spots-dialog:1.1@aar'
    implementation libs.butterknife
    annotationProcessor libs.butterknife.compiler
    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
    implementation libs.firebase.ui.database
    implementation libs.firebase.ui.firestore
    implementation libs.firebase.ui.auth
    implementation libs.firebase.ui.storage
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}

